# chatbot

./: .gitignore  README.md
chatbot/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
chatbot/knowledge/: Coco的Gap year _ 以世界为师，像水一样流动起来.html  activities.txt  cases.txt
chatbot/src/chatbot/: application.py  domain.py  inbound.py  main.py  outbound.py
chatbot/src/chatbot/inbound/: __init__.py  depends.py  routers.py
chatbot/templates/: index.html
