[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["warren-wupeng <warren.wu@visionwx.com>"]
readme = "README.md"
packages = [
{include = "chatbot", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
requests = "^2.31.0"
pymongo = {version = "3.11", extras = ["srv"]}

[tool.poetry.scripts]
chatbot = "chatbot.inbound:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
